--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
 services:
   tf:
     build: .
-    container_name: tf-knugs-gpu
+    container_name: tf
     working_dir: /workspace
     volumes:
       - ./:/workspace
       - /home/deva/.nv/ComputeCache:/root/.nv/ComputeCache
-    command: bash -lc "tail -f /dev/null"
+    command: >
+      bash -lc "
+      python -m ipykernel install --user --name tf --display-name 'Python (tf)';
+      jupyter lab --ip=0.0.0.0 --port=8888 --no-browser
+                  --ServerApp.token='' --ServerApp.password=''
+                  --NotebookApp.token='' --NotebookApp.password=''
+      "
+
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - TF_FORCE_GPU_ALLOW_GROWTH=true
